# Escudo-Emocional

./: Cargo.toml  Dockerfile  README.md  render.yaml
src/: config.rs  extract.rs  i18n.rs  main.rs  multipart.rs  openai.rs  prompts.rs  sanitize.rs
src/handlers/: analyze.rs  index.rs  mod.rs  motors.rs
templates/: base.html  components.html  index.html  landing.html  report.html
templates/partials/: header.html  help_modal.html  scripts.html
